@@ -14,6 +14,7 @@ For a complete change history, please see the Subversion log comments.
 
 Current Version (SVN trunk, 6.1-dev, future 6.2): 
 -------------------------------------------------
+- Fixed grid of thin lines in polygon symbol fills (#3868)
 
 - Fixed cannot add a style to a label in PHP/SWIG Mapscript (#4038)
 
